Adding Picture, Experiences, and Work Station

--- a/index.html
+++ b/index.html
@@ -4,10 +4,58 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Carlos Cruz</title>
+  <title>Carlos Cruz Midterm assignemnt</title>
+  <link href="css/style.css">
 </head>
-<link href="css/style.css">
 <body>
   
+<header> 
+<!-- The Heading of the Website-->
+
+<h1>Carlos Cruz</h1>
+
+<hr>
+
+<!-- Past Work experience-->
+
+<h2>Past Coding Experiences</h2>
+<ul> 
+
+<li>  Numerous Bug Fixes for <a href="https://www.microsoft.com/en-us/"> Microsoft</a> </li>
+<li>  I Created <a href="https://www.coolmathgames.com/"> Cool Math Games </a> </li>
+<li> Minor Bug fixes for <a href="https://www.walmart.com/"> Walmart</a></li>
+</ul>
+
+<!-- Showing off the "WorkStation"-->
+
+<hr> 
+
+<h3>My Work Station!</h3>
+<figure>
+<img src="img/firegamingsetup.jpeg" width="450" height="550">
+
+<figcaption> </figcaption>
+</figure>
+<p> This is where I produce my hightest quality of work!</p>
+<p> (Big Thanks to  <a href="https://www.nvidia.com/en-us/"> Nvidia</a> For the RTX <a href="https://www.nvidia.com/en-us/geforce/graphics-cards/40-series/rtx-4090/"> 4090</a>)</p>
+
+
+
+
+
+</header>
+<main> 
+<!-- The Main stuff on the website-->
+
+
+
+
+<footer> 
+<hr>
+  ©2023 - Carlos Cruz Jr.
+</footer>
+  
+
+</main>
 </body>
 </html>
