Spit and Polish

--- a/index.html
+++ b/index.html
@@ -32,12 +32,13 @@
 <!-- The Heading of the Website-->
 
 
-<section id="Introduction"> 
+<section id="Intro"> 
 
 
   <h1> Hello, thank you for taking time out of your day to visit my website. My name is Carlos and I started building websites back in 2016. Its been a passion of mine for a while and im glad I can use it to help others acheive their dreams! I have worked for websites that you use, and I've helped many other small website creators with their projects. Below You will find more info my past website projects. </h1>
+</section> 
 </header>
-</section>
+
 <hr>
 
 <!-- Past Work experience-->
@@ -91,12 +92,30 @@
 <!--Customer Reviews-->
 
 <hr> 
-<section id="CustomerReview">
-<h2> Customer Reviews </h2>
 
-    <p>"Very Quick Work and Response Time!"- Bill Gates (Old Microsoft CEO) </p>
-    <p> "They totally nailed it! The website looks awesome, user friendly, and professional. Highly recommend them!" - (Family Friend)
-    <p> "Saved me millions with bug fixes!" - Doug McMillion (Walmart Ceo)
+<h2> Customer Reviews </h2>
+<section id="CustomerReview"> 
+  <figure>
+    <img src="img/Bill Gates.webp" width="250" height="250" alt="Bill">
+    <figcaption>"Very Quick Work and Response Time!"- Bill Gates (Old Microsoft CEO)"</figcaption>
+  </figure>
+  <figure>
+    <img src="img/randomman.png" width="250" height="250" alt="random">
+    <figcaption>"They nailed it! The website looks awesome, user friendly, and professional. 
+      Highly recommend them!" - (Family Friend)</figcaption>
+  </figure>
+  <figure>
+    <img src="img/Walmartceo.webp" width="300" height="250" alt="Walmartceo">
+    <figcaption>"Saved me millions with bug fixes!" - Doug McMillion (Walmart Ceo)</figcaption>
+  </figure>
+</section>
+  <section id="">
+
+    
+    <p></p> 
+    <p> 
+  
+    <p> 
 
 
     </section>
@@ -112,12 +131,13 @@
 </section>
 
 </main>
+<section id="Footer"> 
 <footer> 
 <hr>
   ©2023 - Carlos Cruz Jr.
 </footer>
   
-
+</section>
 
 </body>
 </html
